--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.maxsavteam'
-version '1.0-SNAPSHOT'
+version '0.0.1-alpha4'
 
 repositories {
     mavenCentral()
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:16.0.2'
+    implementation 'ch.obermuhlner:big-math:2.3.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
