--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,14 @@ plugins {
 }
 
 group 'com.maxsavteam'
-version '1.0-beta'
+version '1.0-beta2'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:16.0.2'
+    implementation 'org.jetbrains:annotations:20.1.0'
     implementation 'ch.obermuhlner:big-math:2.3.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
