--- a/build.gradle
+++ b/build.gradle
@@ -4,21 +4,26 @@ plugins {
 }
 
 group 'com.maxsavteam'
-version '2.0.0-beta6'
+version '2.0.0-beta9'
 
 repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
+}
+
 task sourcesJar(type: Jar) {
-    from sourceSets.main.output
-    classifier = 'sources'
+    archiveClassifier.set('sources')
+    from sourceSets.main.java.srcDirs
     exclude '**/Main.java'
 }
 
 task javadocJar(type: Jar) {
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
-    classifier = 'javadoc'
 }
 
 dependencies {
