--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.maxsavteam'
-version '2.1.0'
+version '2.1.2'
 
 repositories {
     mavenCentral()
@@ -19,11 +19,6 @@ task sourcesJar(type: Jar) {
     archiveClassifier.set('sources')
     from sourceSets.main.java.srcDirs
     exclude '**/Main.java'
-}
-
-task apiJar(type: Jar){
-    from sourceSets.main.output
-    exclude '**/Main.class'
 }
 
 task javadocJar(type: Jar) {
@@ -43,9 +38,8 @@ afterEvaluate {
     publishing {
         publications {
             maven(MavenPublication) {
-                //from components.java
+                from components.java
 
-                artifact apiJar
                 artifact sourcesJar
                 artifact javadocJar
             }
