--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.maxsavteam'
-version '2.4.0'
+version '2.4.1'
 
 repositories {
     mavenCentral()
@@ -24,6 +24,7 @@ task apiJar(type: Jar){
 task sourcesJar(type: Jar) {
     archiveClassifier.set('sources')
     from sourceSets.main.java.srcDirs
+    exclude '**/Main.java'
 }
 
 task javadocJar(type: Jar) {
@@ -43,9 +44,10 @@ afterEvaluate {
     publishing {
         publications {
             maven(MavenPublication) {
+                from components.java
                 artifact sourcesJar
                 artifact javadocJar
-                artifact apiJar
+                //artifact apiJar
             }
         }
 
