--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.maxsavteam'
-version '2.5.0'
+version '3.0.0-beta'
 
 repositories {
     mavenCentral()
@@ -13,12 +13,6 @@ repositories {
 java {
     sourceCompatibility JavaVersion.VERSION_11
     targetCompatibility JavaVersion.VERSION_11
-}
-
-task apiJar(type: Jar){
-    baseName "publishing-maven"
-    from sourceSets.main.output
-    exclude '**/Main.java'
 }
 
 task sourcesJar(type: Jar) {
@@ -47,7 +41,6 @@ afterEvaluate {
                 from components.java
                 artifact sourcesJar
                 artifact javadocJar
-                //artifact apiJar
             }
         }
 
