--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 plugins {
     id 'java'
-    id 'maven-publish'
 }
 
 group 'com.maxsavteam'
-version '2.8.0'
 
 repositories {
     mavenCentral()
@@ -15,44 +13,9 @@ java {
     targetCompatibility JavaVersion.VERSION_11
 }
 
-task sourcesJar(type: Jar) {
-    archiveClassifier.set('sources')
-    from sourceSets.main.java.srcDirs
-    exclude '**/Main.java'
-}
-
-task javadocJar(type: Jar) {
-    archiveClassifier.set('javadoc')
-    from javadoc.destinationDir
-}
-
 dependencies {
-    implementation 'org.jetbrains:annotations:23.0.0'
-    implementation 'ch.obermuhlner:big-math:2.3.0'
+    implementation project(':core')
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-}
-
-afterEvaluate {
-    publishing {
-        publications {
-            maven(MavenPublication) {
-                from components.java
-                artifact sourcesJar
-                artifact javadocJar
-            }
-        }
-
-        repositories {
-            maven {
-                url 'https://repo.maxsavteam.com/releases'
-                allowInsecureProtocol true
-                credentials {
-                    username 'admin'
-                    password "$System.env.REPOSILITE_ADMIN_TOKEN"
-                }
-            }
-        }
-    }
 }
