--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.maxsavteam'
-version '2.8.0'
+version '3.0.0'
 
 repositories {
     mavenCentral()
@@ -44,6 +44,8 @@ afterEvaluate {
                 from components.java
                 artifact sourcesJar
                 artifact javadocJar
+
+                artifactId 'calculator-core'
             }
         }
 
