--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'maven-publish'
 }
 
+apply from: 'https://resources.maxsavteam.com/gradle/mst-publishing.gradle'
+
 group 'com.maxsavteam'
 version '3.1.0'
 
@@ -19,16 +21,6 @@ java {
     targetCompatibility JavaVersion.VERSION_11
 }
 
-task sourcesJar(type: Jar) {
-    archiveClassifier.set('sources')
-    from sourceSets.main.java.srcDirs
-}
-
-task javadocJar(type: Jar) {
-    archiveClassifier.set('javadoc')
-    from javadoc.destinationDir
-}
-
 dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
     implementation 'ch.obermuhlner:big-math:2.3.0'
@@ -37,27 +29,4 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            maven(MavenPublication) {
-                from components.java
-                artifact sourcesJar
-                artifact javadocJar
-
-                artifactId 'calculator-core'
-            }
-        }
-
-        repositories {
-            maven {
-                url 'https://repo.maxsavteam.com/releases'
-                allowInsecureProtocol true
-                credentials {
-                    username 'admin'
-                    password "$System.env.REPOSILITE_ADMIN_TOKEN"
-                }
-            }
-        }
-    }
-}
+mstPublishing('msavitsky', "$System.env.REPOSILITE_ADMIN_TOKEN", 'calculator-core')
